--- a/Tech Stack.ipynb
+++ b/Tech Stack.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "\n",
     "### Slide 1: Title Slide\n",
-    "- **Title**: Introduction to Tech Stacks\n",
+    "- **Title**: Tech Stacks\n",
     "- **Subtitle**: Understanding the Layers of Modern Software Development\n",
     "- **Your Name and Title**\n",
     "- **Date**\n"
