--- a/Tech Stack.ipynb
+++ b/Tech Stack.ipynb
@@ -5,18 +5,6 @@
    "metadata": {},
    "source": [
     "\n",
-    "### Slide 1: Title Slide\n",
-    "- **Title**: Tech Stacks\n",
-    "- **Subtitle**: Understanding the Layers of Modern Software Development\n",
-    "- **Your Name and Title**\n",
-    "- **Date**\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
     "## Topics Covered\n",
     "- What is a Tech Stack?\n",
     "- Importance of Tech Stacks\n",
@@ -496,7 +484,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "### Slide 10: The Database Layer\n",
+    "### The Database Layer\n",
     "- **Speaker Notes**: Discuss the role of data storage and management.\n"
    ]
   },
@@ -505,7 +493,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "### Slide 11: Database Technologies\n",
+    "### Database Technologies\n",
     "- **Speaker Notes**: List examples: MySQL, PostgreSQL, MongoDB.\n"
    ]
   },
@@ -1263,7 +1251,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "### Slide 28: Performance and Scalability\n",
+    "### Performance and Scalability\n",
     "- **Speaker Notes**: Discuss how tech stack choices affect performance and scalability.\n"
    ]
   },
